updated security configurations
Signed-off-by: suhashemanth <suhas@fortuneplastech.com>